--- a/App.css
+++ b/App.css
@@ -1,27 +1,12 @@
 .App {
-    background-color: #58bb7e;
-    text-align: left;
-}
+  background: rgba(245, 245, 245, 0.75);  
+  box-shadow: 10px 20px 4px rgba(34, 82, 50, 0.25);
+  border-radius: 64px;
+  text-align: left;
+  padding:2%;
+  margin: 50px; 
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-/* 
-.App-header {
-  background-color: #58bb7e;
   min-height: 100vh;
   display: flex;
-  align-items: left;
-  justify-content: center;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-
-
-/* 
-.col1{
-  text-align: left;
-} */
+}
