--- a/Nav.css
+++ b/Nav.css
@@ -1,3 +1,45 @@
-div{
-    text-align: left;
+span.a{
+    display: inline;
+}
+ul{
+    background: linear-gradient(180deg, rgba(182, 182, 182, 0.8) 0%, rgba(196, 196, 196, 0.8) 50%, rgba(222, 245, 222, 0.8) 100%);
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+
+li {
+    background-color: #c4c4c441;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    margin: 10px;
+    padding: 2% ;
+    height: 57px;
+}
+
+.nav-link {
+    display: inline;
+}
+
+.temp{
+align-items: left;
+width: 45px;
+height: 45px;
+left: 196px;
+top: 206px;
+
+
+background: linear-gradient(180deg, #FF9900 0%, rgba(254, 195, 46, 0.728437) 51.56%, #FCFF71 100%);
+box-shadow: inset 0px 10px 4px rgba(0, 0, 0, 0.25);
+transform: matrix(-1, 0, 0, 1, 0, 0);}
+
+.size{
+
+    width: 45px;
+    height:  45px;
+    left: 96px;
+    top: 106px;
+}
+
+a{
+    color: #8D8D8D;
 }
