--- a/App.css
+++ b/App.css
@@ -26,3 +26,10 @@
   box-shadow: inset 10px 20px 4px rgb(0 0 0 / 25%);
   display: flex;
 }
+
+#bg-img{
+  background: url(./logo2.svg) no-repeat center 50%;
+  background-size: 50%;
+  margin: 0%;
+  
+}
